--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
